Adds breakpoint variables and mixin helper

--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -1,3 +1,5 @@
+@use 'breakpoints';
+
 // Type Face
 body {
   font-family: 'Bricolage Grotesque', sans-serif;
@@ -33,4 +35,21 @@ h3 {
 
 p {
   font-size: 1.25rem;
+}
+
+@include breakpoints.media-query('mobile') {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 2rem;
+  }
 }
