WIP: Adds initial styling for overview mobile sections

--- a/src/lib/styles/_fonts.scss
+++ b/src/lib/styles/_fonts.scss
@@ -1,3 +1,6 @@
+/// Bricolage Grotesque
+/// @link https://ateliertriay.github.io/bricolage/
+
 @font-face {
   font-family: 'Bricolage Grotesque';
   src: url('/fonts/BricolageGrotesque-Regular.woff2') format('woff2');
