--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -6,14 +6,20 @@ body {
   font-weight: normal;
 }
 
-h1,
+h1 {
+  font-family: 'Bricolage Grotesque', sans-serif;
+  font-weight: bold;
+  line-height: 1;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-family: 'Bricolage Grotesque', sans-serif;
-  font-weight: bold;
+  font-weight: 500;
+  line-height: 1;
 }
 
 p {
