Removes media-query mixin, Updates existing media queries and OverviewCondition

--- a/src/lib/styles/_typography.scss
+++ b/src/lib/styles/_typography.scss
@@ -43,7 +43,7 @@ p {
   font-size: 1.25rem;
 }
 
-@include breakpoints.media-query('mobile') {
+@media screen and (width > breakpoints.$tablet) {
   h1 {
     font-size: 3rem;
   }
