Small adjustments to scene colors and text background on mobile

--- a/src/lib/styles/_color-themes.scss
+++ b/src/lib/styles/_color-themes.scss
@@ -86,7 +86,7 @@
   --theme-text-tertiary: var(--sunburn-200);
   --theme-text-primary-inversed: var(--sunburn-900);
   --theme-text-secondary-inversed: var(--sunburn-800);
-  --theme-text-bg-inversed: var(--sunburn-200);
+  --theme-text-bg-inversed: #f0d783;
 
   --theme-icon-primary: var(--sunburn-100);
   --theme-icon-secondary: var(--sunburn-200);
