--- a/src/lib/styles/_colors.scss
+++ b/src/lib/styles/_colors.scss
@@ -1,5 +1,3 @@
-// Reusable Variables (css props)
-:root {
-  --border-color: var(--theme-800);
-  --header-color: var(--theme-100);
+body {
+  background-color: var(--theme-text-bg-inversed);
 }
