Moves noise texture to main element to cover full area, Adds improved sunflower model

--- a/src/lib/styles/_general.scss
+++ b/src/lib/styles/_general.scss
@@ -12,7 +12,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-clip: border-box;
-  filter: contrast(400%) brightness(100%);
+  filter: contrast(200%) brightness(100%);
 }
 
 .overlay {
@@ -21,5 +21,5 @@
   inset: 0;
 
   background-color: var(--theme-bg-primary);
-  mix-blend-mode: multiply;
+  mix-blend-mode: darken;
 }
