Fixes background color on mobile for pleasant theme

--- a/src/lib/styles/_color-themes.scss
+++ b/src/lib/styles/_color-themes.scss
@@ -67,7 +67,7 @@
   --theme-text-tertiary: var(--clear-sky-200);
   --theme-text-primary-inversed: var(--clear-sky-900);
   --theme-text-secondary-inversed: var(--clear-sky-800);
-  --theme-text-bg-inversed: var(--clear-sky-200);
+  --theme-text-bg-inversed: #73d4ef;
 
   --theme-icon-primary: var(--clear-sky-50);
   --theme-icon-secondary: var(--clear-sky-200);
