Fixes default theme color on icons

--- a/src/lib/styles/_color-themes.scss
+++ b/src/lib/styles/_color-themes.scss
@@ -38,7 +38,7 @@
 
 	/// Hot - Sunburn
 	--sunburn-50: #fff4eb;
-	--sunburn-100: #ffe1c8;
+	--sunburn-100: #ffd7ae;
 	--sunburn-200: #ffc39a;
 	--sunburn-300: #ffa368;
 	--sunburn-400: #f9843f;
@@ -62,8 +62,8 @@
 	--theme-text-primary-inversed: var(--warm-white-900);
 	--theme-text-secondary-inversed: var(--warm-white-800);
 
-	--theme-icon-primary: var(--warm-white-50);
-	--theme-icon-secondary: var(--warm-white-200);
+	--theme-icon-primary: var(--warm-white-900);
+	--theme-icon-secondary: var(--warm-white-800);
 
 	--theme-border-primary: var(--warm-white-700);
 }
