--- a/src/lib/styles/_general.scss
+++ b/src/lib/styles/_general.scss
@@ -1,21 +1,21 @@
 .isolate {
-  isolation: isolate;
+	isolation: isolate;
 }
 
 .noise {
-  z-index: -1;
-  position: absolute;
-  inset: 0;
+	z-index: -1;
+	position: absolute;
+	inset: 0;
 
-  background: url('/src/lib/components/Noise/noise.svg');
-  filter: contrast(400%) brightness(100%);
+	background: url('/src/lib/components/Noise/noise.svg');
+	filter: contrast(250%) brightness(100%);
 }
 
 .overlay {
-  z-index: -1;
-  position: absolute;
-  inset: 0;
+	z-index: -1;
+	position: absolute;
+	inset: 0;
 
-  background-color: var(--theme-bg-primary);
-  mix-blend-mode: multiply;
+	background-color: var(--theme-bg-primary);
+	mix-blend-mode: darken;
 }
