--- a/src/lib/styles/_accessibility.scss
+++ b/src/lib/styles/_accessibility.scss
@@ -1,9 +1,16 @@
 .visually-hidden {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+
+@mixin focus-visible($ringColor) {
+	&:focus-visible {
+		outline: 2px solid $ringColor;
+		outline-offset: 2px; // creates the gap
+	}
 }
