--- a/src/lib/styles/_fluid-sizes.scss
+++ b/src/lib/styles/_fluid-sizes.scss
@@ -9,6 +9,7 @@
 
 	--fluid-size-em-mini-minus: 0.2em;
 	--fluid-size-em-mini: 0.5em;
+	--fluid-size-em-mini-plus: 0.75em;
 	--fluid-size-em-small: 1em;
 	--fluid-size-em-small-plus: 1.25em;
 	--fluid-size-em-medium: 1.5em;
